--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+# Custom
+*.DS_Store
+*.Pods/
+
 ## Build generated
 build/
 DerivedData/
