Add Privacy - Contacts Usage Description

--- a/AddressBookApp/AddressBookApp/Info.plist
+++ b/AddressBookApp/AddressBookApp/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>내가 너의 연락처의 접근해도 되겠니?</string>
 </dict>
 </plist>
