--- a/AddressBookApp/.swiftlint.yml
+++ b/AddressBookApp/.swiftlint.yml
@@ -2,6 +2,7 @@ disabled_rules :
  - trailing_whitespace
  - cyclomatic_complexity
  - force_cast
+ - identifier_name
 
 line_length :
  - 300 # warning
