info.plist에서 연락처 접근 권한 추가

--- a/AddressBookApp/AddressBookApp/Info.plist
+++ b/AddressBookApp/AddressBookApp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSContactsUsageDescription</key>
+	<string>사용자 연락처 정보를 사용하려고하는데 당연히 승인 해주시겠죠????</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
