Contacts 관리를 위한 plist 환경 추가

--- a/AddressBookApp/AddressBookApp/Info.plist
+++ b/AddressBookApp/AddressBookApp/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSContactsUsageDescription</key>
+    <string>This will be used to manage your contacts.</string>
 </dict>
 </plist>
